Heading wrapping fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,6 @@ body {
   text-align: center;
 }
 
-.intro * {
-  display: inline-block;
-}
-
 .intro h1 {
   font-weight: 200;
   margin-bottom: 1rem;
